--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,8 +50,10 @@
   },
   "peerDependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-native-camera-roll/camera-roll": "^5.3.1",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/core": "^6.4.8",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "lodash": "^4.17.21",
@@ -69,6 +71,8 @@
     "react-native-share": "^8.0.0",
     "react-native-svg": "^13.7.0",
     "react-native-ui-lib": "^6.29.0",
+    "react-native-video": "^5.2.1",
+    "react-native-vision-camera": "^2.15.4",
     "react-native-webview": "^11.26.1"
   },
   "jest": {
