--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -70,11 +70,12 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^2.14.4",
+    "react-native-sensors": "^7.3.6",
     "react-native-share": "^8.0.0",
     "react-native-svg": "^13.7.0",
     "react-native-ui-lib": "^6.29.0",
     "react-native-video": "^5.2.1",
-    "react-native-vision-camera": "^2.15.4",
+    "react-native-vision-camera": "https://github.com/ajp8164/react-native-vision-camera",
     "react-native-webview": "^11.26.1"
   },
   "jest": {
