--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -64,6 +64,7 @@
     "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-biometrics": "^3.0.1",
     "react-native-camera-kit": "^13.0.0",
+    "react-native-currency-input": "^1.1.1",
     "react-native-device-info": "^10.3.0",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-cache-wrapper": "github:ajp8164/react-native-image-cache-wrapper#parallel-fetch",
