--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -55,6 +55,7 @@
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/core": "^6.4.8",
+    "@react-navigation/native": "^6.1.10",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "lodash": "^4.17.21",
