--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,8 +2,9 @@ pre-commit:
   parallel: true
   commands:
     lint:
-      glob: "*.{js,ts,tsx}"
+      glob: '*.{js,ts,tsx}'
+      exclude: '.eslintrc.js|.prettierrc.js'
       run: npm run lint {staged_files}
     types:
-      glob: "*.{json,js,ts,tsx}"
+      glob: '*.{json,js,ts,tsx}'
       run: npm run typescript --noEmit
