--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "babel-jest": "^29.3.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-module-resolver": "^1.5.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.3.0",
+    "prettier": "^3.2.5",
     "react": "^18.1.0",
     "react-native": "^0.70.5",
     "typescript": "^4.8.4"
