--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -47,16 +47,20 @@
     "babel-jest": "^29.4.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-plugin-module-resolver": "^1.5.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.4.1",
+    "prettier": "^3.2.5",
     "react": "^18.1.0",
     "react-native": "^0.70.5",
     "react-native-builder-bob": "^0.20.3",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
+    "@expo/react-native-action-sheet": "^4.0.1",
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-camera-roll/camera-roll": "^5.3.1",
     "@react-native-community/blur": "^4.3.0",
@@ -66,6 +70,7 @@
     "@react-navigation/native": "^6.1.10",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "lodash": "^4.17.21",
     "luxon": "^3.1.0",
     "react": ">=18.1.0",
@@ -75,6 +80,8 @@
     "react-native-camera-kit": "^13.0.0",
     "react-native-currency-input": "^1.1.1",
     "react-native-device-info": "^10.3.0",
+    "react-native-document-picker": "^9.1.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-cache-wrapper": "github:ajp8164/react-native-image-cache-wrapper#parallel-fetch",
     "react-native-image-picker": "^7.1.0",
