--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "preset": "react-native"
   },
   "dependencies": {
-    "@rneui/base": "^4.0.0-rc.8"
+    "@rneui/base": "^4.0.0-rc.8",
+    "react-native-image-crop-picker": "^0.41.2"
   }
 }
