--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/lodash": "^4.14.188",
     "@types/luxon": "^3.1.0",
+    "@types/react": "^19.1.8",
     "@types/react-native": "^0.71.1",
     "@types/react-native-video": "^5.0.14",
     "@types/tiny-secp256k1": "^2.0.1",
