--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,6 +43,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/lodash": "^4.14.188",
     "@types/luxon": "^3.1.0",
+    "@types/react": "^19.1.8",
     "@types/react-native": "^0.71.1",
     "babel-jest": "^29.4.1",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -68,9 +69,8 @@
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/core": "^6.4.8",
     "@react-navigation/native": "^6.1.10",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.7",
-    "ffmpeg-kit-react-native": "^6.0.2",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "lodash": "^4.17.21",
     "luxon": "^3.1.0",
     "react": ">=18.1.0",
