--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.3.0",
     "prettier": "^3.2.5",
-    "react": "^18.1.0",
-    "react-native": "^0.70.5",
+    "react": ">=18",
+    "react-native": ">=0.70",
     "typescript": "^4.8.4"
   },
   "jest": {
     "preset": "react-native"
   },
   "dependencies": {
-    "@rneui/base": "^4.0.0-rc.7",
+    "@rn-vui/base": "^5.1.7",
     "react-native-image-crop-picker": "^0.41.2"
   }
 }
