--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -45,14 +45,14 @@
     "eslint-plugin-module-resolver": "^1.5.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.4.1",
-    "react": "^18.1.0",
-    "react-native": "^0.70.5",
+    "react": ">=18",
+    "react-native": ">=0.70",
     "react-native-builder-bob": "^0.20.3",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "react": ">=18.1.0",
-    "react-native": ">=0.70.5"
+    "react": ">=18",
+    "react-native": ">=0.70"
   },
   "jest": {
     "preset": "react-native"
