--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -55,26 +55,26 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.4.1",
     "prettier": "^3.2.5",
-    "react": "^18.1.0",
-    "react-native": "^0.70.5",
+    "react": ">=18",
+    "react-native": ">=0.70",
     "react-native-builder-bob": "^0.20.3",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "@expo/react-native-action-sheet": "^4.0.1",
-    "@gorhom/bottom-sheet": "^4.4.5",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-camera-roll/camera-roll": "^5.3.1",
     "@react-native-community/blur": "^4.3.0",
-    "@react-native-community/datetimepicker": "^6.7.3",
-    "@react-native-picker/picker": "^2.4.8",
-    "@react-navigation/core": "^6.4.8",
-    "@react-navigation/native": "^6.1.10",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.8",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/core": "^7.10.0",
+    "@react-navigation/native": "^7.1.6",
+    "@rn-vui/base": "^5.1.7",
+    "@rn-vui/themed": "^5.1.7",
     "lodash": "^4.17.21",
-    "luxon": "^3.1.0",
-    "react": ">=18.1.0",
-    "react-native": ">=0.70.5",
+    "luxon": "^3.5.0",
+    "react": ">=18",
+    "react-native": ">=0.70",
     "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-biometrics": "^3.0.1",
     "react-native-camera-kit": "^13.0.0",
@@ -87,12 +87,12 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^3.3.0",
     "react-native-sensors": "^7.3.6",
-    "react-native-share": "^8.0.0",
-    "react-native-svg": "^13.7.0",
+    "react-native-share": "^12.0.3",
+    "react-native-svg": "^15.11.1",
     "react-native-ui-lib": "^7.14.4",
     "react-native-video": "^5.2.1",
     "react-native-vision-camera": "github:ajp8164/react-native-vision-camera",
-    "react-native-webview": "^11.26.1"
+    "react-native-webview": "^13.13.5"
   },
   "jest": {
     "preset": "react-native"
