--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -91,7 +91,7 @@
     "react-native-svg": "^15.11.1",
     "react-native-ui-lib": "^7.14.4",
     "react-native-video": "^5.2.1",
-    "react-native-vision-camera": "github:ajp8164/react-native-vision-camera",
+    "react-native-vision-camera": "^4.6.4",
     "react-native-webview": "^13.13.5"
   },
   "jest": {
