--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -66,6 +66,7 @@
     "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-documents/picker": "^10.1.3",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/core": "^7.10.0",
     "@react-navigation/native": "^7.1.6",
@@ -80,7 +81,6 @@
     "react-native-camera-kit": "^15.1.0",
     "react-native-currency-input": "^1.1.1",
     "react-native-device-info": "^14.0.4",
-    "react-native-document-picker": "^9.1.1",
     "react-native-fs": "^2.20.0",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-cache-wrapper": "github:ajp8164/react-native-image-cache-wrapper#parallel-fetch",
