Update all deps, lint, format

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../../tsconfig",
+  "extends": "../../tsconfig.json",
   "references": [],
   "compilerOptions": {
     "outDir": "./lib/typescript"
-  },
+  }
 }
