--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,9 +1,6 @@
 {
-  "extends": "../../tsconfig",
-  "references": [
-    { "path": "../common" },
-    { "path": "../core" }
-  ],
+  "extends": "../../tsconfig.json",
+  "references": [{ "path": "../common" }, { "path": "../core" }],
   "compilerOptions": {
     "outDir": "./lib/typescript"
   }
