--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-native-ajp-elements-monorepo",
   "description": "A React Native library for apps.",
   "scripts": {
+    "postinstall": "patch-package",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "typescript": "tsc --noEmit --composite false",
-    "test": "jest",
     "build": "lerna run prepack",
     "clean": "lerna run clean",
     "publish": "lerna publish",
@@ -23,40 +23,49 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-transform-typescript": "^7.20.13",
-    "@babel/preset-typescript": "^7.18.6",
-    "@babel/runtime": "^7.20.1",
-    "@evilmartians/lefthook": "^1.2.8",
-    "@lerna-lite/cli": "^1.14.2",
-    "@lerna-lite/run": "^1.14.2",
+    "@babel/core": "^7.27.4",
+    "@babel/plugin-transform-typescript": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@babel/runtime": "^7.27.6",
+    "@evilmartians/lefthook": "^1.11.14",
+    "@lerna-lite/cli": "^4.4.1",
+    "@lerna-lite/run": "^4.4.1",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/lodash": "^4.14.188",
-    "@types/luxon": "^3.1.0",
+    "@react-native/babel-preset": "0.79.3",
+    "@react-native/typescript-config": "^0.79.3",
+    "@types/lodash": "^4.17.18",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.8",
-    "@types/react-native": "^0.71.1",
-    "@types/react-native-video": "^5.0.14",
-    "@types/tiny-secp256k1": "^2.0.1",
-    "babel-jest": "^29.3.0",
-    "babel-plugin-module-resolver": "^5.0.0",
+    "@types/react-native-video": "^5.0.20",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-plugin-module-resolver": "^1.5.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "jest": "^29.3.0",
+    "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
     "react": ">=18",
     "react-native": ">=0.70",
-    "typescript": "^4.8.4"
-  },
-  "jest": {
-    "preset": "react-native"
+    "react-native-builder-bob": "^0.20.3",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@rn-vui/base": "^5.1.7",
-    "react-native-image-crop-picker": "^0.41.2"
+    "react-native-image-crop-picker": "^0.50.1"
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
+    ]
   }
 }
